--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,11 +6,11 @@ Author: Tony Sun [aut, cre]
 Maintainer: Tony Sun <tys2108@cumc.columbia.edu>
 Description: For running large-scale diagnostic characterizations.
 Depends:
-  DatabaseConnector (>= 2.4.0)
-Imports:
-	CohortDiagnostics (>= 1.2.2),
+  DatabaseConnector (>= 2.4.0),
   reticulate (>= 1.20),
   OhdsiSharing (>= 0.2.2)
+Imports:
+	CohortDiagnostics (>= 1.2.2)
 Remotes:
   OHDSI/CohortDiagnostics,
   OHDSI/FeatureExtraction,
