--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,4 @@ output/created_files/*.csv
 output/created_files/*.pickle
 output/graphs/*.html
 output/summaries/ohdsi_cumc_2021q1r2/*.csv
-.Rproj.user
+.Rproj.user/*
